--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -59,7 +59,7 @@ const { Content } = await render(post);
     }
     <PostTags tags={tags} class="mb-6" />
   </div>
-  <div class="wrapper-alt -mx-2 md:mx-auto">
+  <div class="wrapper-alt md:mx-auto">
     <div class="prose">
       <Content components={mdxComponents} />
     </div>
