--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const { meta } = Astro.props;
   <head>
     <BaseHead meta={meta} />
   </head>
-  <body>
+  <body class="max-w-full overflow-x-hidden">
     <Header />
     <main>
       <slot />
