--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -76,5 +76,6 @@ const { Content } = await render(post);
 </aside>
 
 <aside class="wrapper mb-6 rounded-xl bg-secondary/20 py-6 backdrop-blur-sm">
-  <div id="disqus_thread">To show comments is mandatory to accept cookie policy.</div>
+  <div id="disqus_thread" class="p-4 text-center" style={{ color: '#333' }}></div>
+  To comment or view comments you need to to accept cookie policy.
 </aside>
