--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -59,8 +59,8 @@ const { Content } = await render(post);
     }
     <PostTags tags={tags} class="mb-6" />
   </div>
-  <div class="wrapper-alt md:mx-auto">
-    <div class="prose">
+  <div class="wrapper-no-padding">
+    <div class="prose p-6 sm:p-6 lg:p-8">
       <Content components={mdxComponents} />
     </div>
   </div>
