--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -79,7 +79,7 @@ const { Content } = await render(post);
   <div
     id="disqus_thread"
     class="p-4 text-center"
-    style={{ color: '#333', backgroundColor: '#f9f9f9' }}
+    style={{ color: '#333', backgroundColor: 'rgba(144, 198, 190, 0.2)' }}
   >
     To comment or view comments you need to to accept cookie policy.
   </div>
