fix: disqus theme

--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -75,12 +75,8 @@ const { Content } = await render(post);
   <Search className="pagefind-ui-dark" />
 </aside>
 
-<aside class="wrapper mb-6 rounded-xl bg-secondary/20 py-6 backdrop-blur-sm">
-  <div
-    id="disqus_thread"
-    class="p-4 text-center"
-    style={{ color: '#333', backgroundColor: 'transparent' }}
-  >
+<aside class="wrapper mb-6 rounded-xl bg-[#8BC2B933] text-[#333] py-6 backdrop-blur-sm">
+  <div id="disqus_thread" class="p-4 text-center text-[#333]">
     To comment or view comments you need to to accept cookie policy.
   </div>
 </aside>
