--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,5 +31,7 @@ const { meta } = Astro.props;
       data-category="analytics"
       data-service="disqus"
       data-src={`https://${DISQUS}/embed.js`}></script>
+
+    <script async src={`https://${DISQUS}/embed.js`}></script>
   </body>
 </html>
