--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -21,7 +21,7 @@ const getPage = (num: number) => {
 };
 ---
 
-<nav aria-label="Pages" class="bg-secondary-light p-4 backdrop-blur-xs">
+<nav aria-label="Pages" class="wrapper bg-secondary-light p-4 backdrop-blur-xs m-4 rounded-lg">
   <ul class="flex items-center justify-center gap-1 flex-wrap max-w-[800px] mx-auto">
     {
       page.url.first && page.url.first !== page.url.current && (
