--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -12,9 +12,9 @@ const meta = {
 ---
 
 <BaseLayout meta={meta}>
-  <div class="wrapper-alt">
+  <div class="wrapper-no-padding">
     <AboutMe />
-    <div class="prose">
+    <div class="prose p-6 sm:p-6 lg:p-8">
       <slot />
     </div>
   </div>
