--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -16,8 +16,8 @@ const meta = {
     <SectionHeader title={meta.title} description={meta.description} subtitle={meta.subtitle} />
   </div>
 
-  <div class="wrapper-alt">
-    <div class="prose">
+  <div class="wrapper-no-padding">
+    <div class="prose p-6 sm:p-6 lg:p-8">
       <slot />
     </div>
   </div>
