--- a/src/components/menu/MenuOverlay.astro
+++ b/src/components/menu/MenuOverlay.astro
@@ -25,7 +25,7 @@ const menu: Array<{ label: string; href: string }> = Array.isArray(menuRaw) ? me
       alt="Sergio Carracedo"
       width="50"
       height="50"
-      class="inline-block rounded-full border-solid border-primary border-4"
+      class="inline-block rounded-full border-solid border-primary border-4 w-11 h-11"
     />
     {SITE_TITLE}
   </h2>
