--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -2,7 +2,7 @@
 import { SOCIAL } from '../consts';
 ---
 
-<div class="flex gap-2 flex-wrap items-center justify-center">
+<div class="flex gap-2 flex-wrap items-center">
   {
     SOCIAL.map((social) => (
       <a
