--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -12,7 +12,7 @@ const { class: className } = Astro.props;
 
 <section
   class:list={[
-    'max-w-[900px] mx-auto mb-6 p-6 background-diagonal-secondary rounded-lg relative',
+    'max-w-[900px] mx-auto mb-6 py-6 px-4 sm:px-6 lg:px-8 background-diagonal-secondary rounded-lg relative',
     'flex flex-col md:flex-row items-center gap-6',
     className,
   ]}
