--- a/src/components/posts/PostTeaser.astro
+++ b/src/components/posts/PostTeaser.astro
@@ -21,7 +21,7 @@ const { readingTime, excerpt } = enrichedPost;
   class:list={[
     'md:flex mb-10',
     style === 'highlighted' &&
-      'flex-col content-center bg-secondary md:bg-transparent rounded-sm gap-2',
+      'flex-col content-center bg-secondary/60 rounded-lg gap-2 backdrop-blur-xs',
     style === 'default' && 'gap-4',
   ]}
 >
