--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -34,10 +34,11 @@
 }
 
 @utility anchor {
-  display: block;
+  padding-top: 100px;
+  margin-top: -100px;
+    /* display: block;
   position: relative;
-  top: -100px;
-  visibility: hidden;
+  // visibility: hidden; */
 }
 
 
