--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import MenuOverlay from './menu/MenuOverlay.astro';
       <a href="/">
         <Image
           src="/i/sergiocarracedo.jpg"
-          alt="Sergio Carracedo"
+          alt="Image of Sergio Carracedo, the blog author"
           width={50}
           height={50}
           class="inline-block mr-2 rounded-full border-solid border-primary border-4 w-11 h-11 md:w-13 md:h-13"
