--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -132,6 +132,15 @@
       color: var(--pagefind-ui-text) !important;
     }
   }
+
+  .pagefind-ui-floating { 
+    position: relative;
+    .pagefind-ui__drawer {
+      @apply absolute! top-11! left-0! right-0! z-50! bg-primary/50! backdrop-blur-sm! rounded-lg! shadow-lg! p-4! pt-0! max-h-[500px]! overflow-y-auto!;
+      --pagefind-ui-text: #fff;    
+      color: var(--pagefind-ui-text) !important;
+    }
+  }
 }
 
 @layer base {
