--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'Noto Sans';
+  font-family: 'NotoSans';
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/fonts/NotoSans-Regular.ttf) format('ttf');
+  src: url(/fonts/NotoSans-Regular.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: 'Noto Sans';
+  font-family: 'NotoSans';
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/fonts/NotoSans-Bold.ttf) format('ttf');
+  src: url(/fonts/NotoSans-Bold.ttf) format('truetype');
 }
 
 
