--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,6 +26,16 @@ const { meta } = Astro.props;
       data-service="ga4"
       data-src={`https://www.googletagmanager.com/gtag/js?id=${GA}`}></script>
 
+    <script1>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-87X78TXEGE');
+    </script>
+
     <script
       async
       data-category="analytics"
