--- a/src/components/posts/PostTeaser.astro
+++ b/src/components/posts/PostTeaser.astro
@@ -72,7 +72,7 @@ const { readingTime, excerpt } = enrichedPost;
       <h3
         class:list={[
           'm-0 font-impact font-bold text-2xl md:text-3xl mb-4',
-          style === 'highlighted' && 'md:px-20 flex justify-center',
+          style === 'highlighted' && 'md:px-20 flex justify-center text-center',
           style === 'default' && 'max-w-md',
         ]}
       >
