--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -18,7 +18,7 @@ type Props = {
 const { post } = Astro.props;
 
 const enrichedPost = enrichBlogPost(post);
-const { title, pubDate, heroImage, tags } = enrichedPost.data;
+const { title, pubDate, heroImage, tags, heroImageMeta } = enrichedPost.data;
 const { readingTime } = enrichedPost;
 
 const { Content } = await render(post);
@@ -52,8 +52,21 @@ const { Content } = await render(post);
 
     {
       heroImage && (
-        <div class="radius-2xl overflow-hidden mb-6">
+        <div class="rounded-lg overflow-hidden mb-6 relative group overflow-hidden">
           <Picture width={836} height={470} src={heroImage} alt={title} fit="cover" />
+          {(heroImageMeta?.author || heroImageMeta?.prompt) && (
+            <div class="text-xs text-gray-500  absolute bottom-0 left-0 right-0 group-hover:translate-y-0 translate-y-[calc(100%-10px)] transition-transform duration-300 z-10">
+              <div class="bg-gray-100/60 p-2">
+                <em>Picture by</em> <strong>{heroImageMeta.author}</strong>
+                {heroImageMeta.prompt && (
+                  <span>
+                    {' '}
+                    - <em>Prompt</em>: {heroImageMeta.prompt}
+                  </span>
+                )}
+              </div>
+            </div>
+          )}
         </div>
       )
     }
