--- a/src/components/posts/PostSingle.astro
+++ b/src/components/posts/PostSingle.astro
@@ -54,14 +54,38 @@ const { Content } = await render(post);
       heroImage && (
         <div class="rounded-lg overflow-hidden mb-6 relative group overflow-hidden">
           <Picture width={836} height={470} src={heroImage} alt={title} fit="cover" />
-          {(heroImageMeta?.author || heroImageMeta?.prompt) && (
-            <div class="text-xs text-gray-500  absolute bottom-0 left-0 right-0 group-hover:translate-y-0 translate-y-[calc(100%-10px)] transition-transform duration-300 z-10">
-              <div class="bg-gray-100/60 p-2">
-                <em>Picture by</em> <strong>{heroImageMeta.author}</strong>
+          {(heroImageMeta?.author ||
+            heroImageMeta?.prompt ||
+            heroImageMeta?.source ||
+            heroImageMeta?.licence) && (
+            <div class="text-xs text-gray-500 absolute bottom-0 left-0 right-0 group-hover:translate-y-0 translate-y-[calc(100%-10px)] transition-transform duration-300 z-10">
+              <div class="bg-gray-100/90 p-2">
+                <em>Picture by</em> <strong>
+                  {heroImageMeta.source && (
+                    <a
+                      href={heroImageMeta.source}
+                      class="text-primary link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      {heroImageMeta.author}
+                    </a>
+                  ) || (
+                    <strong>{heroImageMeta.author}</strong>
+                  )}
+
+
                 {heroImageMeta.prompt && (
                   <span>
                     {' '}
                     - <em>Prompt</em>: {heroImageMeta.prompt}
+                  </span>
+                )}
+                
+                {heroImageMeta.licence && (
+                  <span>
+                    {' '}
+                    - <em>Licence</em>: {heroImageMeta.licence}
                   </span>
                 )}
               </div>
