--- a/src/components/about/AboutMe.astro
+++ b/src/components/about/AboutMe.astro
@@ -23,7 +23,9 @@ const { class: className } = Astro.props;
     className,
   ]}
 >
-  <div class="md:absolute bottom-0 left-0 w-70 h-70 z-0 mix-blend-multiply order-2 md: order-1">
+  <div
+    class="md:absolute bottom-0 left-0 w-70 h-70 z-0 mix-blend-multiply order-2 md:order-1 -mb-6 md:mb-0 -ml-10 md:ml-0"
+  >
     <img
       alt={SITE_AUTHOR}
       height="180"
