post: design system teams

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import MenuOverlay from './menu/MenuOverlay.astro';
 
 <header
   id="site-header"
-  class="sticky top-0 z-50 backdrop-blur-xs bg-secondary/40 mb-6 md:mb-15 transition-all duration-500 max-w-full mx-auto"
+  class="sticky top-0 z-50 backdrop-blur-xs bg-secondary/40 mb-6 md:mb-15 transition-all duration-500 max-w-full mx-auto print:static"
 >
   <nav class="flex gap-4 p-4 items-center justify-between wrapper">
     <h2 class="text-sm md:text-xl">
