--- a/src/components/posts/parts/PostTags.astro
+++ b/src/components/posts/parts/PostTags.astro
@@ -2,6 +2,7 @@
 interface Props {
   tags?: string[];
   class?: string;
+  postId?: string;
 }
 
 const { tags } = Astro.props;
@@ -9,7 +10,10 @@ const { tags } = Astro.props;
 
 {
   tags && tags.length > 0 && (
-    <div class:list={['flex flex-wrap gap-2', Astro.props.class]}>
+    <div
+      class:list={['flex flex-wrap gap-2', Astro.props.class]}
+      transition:name={`post-tags-${Astro.props.postId}`}
+    >
       {tags.map((tag) => (
         <a
           href={`/tags/${tag}/`}
