feat: tag slugs

--- a/src/components/posts/parts/PostTags.astro
+++ b/src/components/posts/parts/PostTags.astro
@@ -1,4 +1,6 @@
 ---
+import { createSlug } from '@/utils/createSlug';
+
 interface Props {
   tags?: string[];
   class?: string;
@@ -6,6 +8,7 @@ interface Props {
 }
 
 const { tags } = Astro.props;
+const tagsMap = new Map<string, string>((tags || []).map((tag) => [createSlug(tag), tag]));
 ---
 
 {
@@ -14,9 +17,9 @@ const { tags } = Astro.props;
       class:list={['flex flex-wrap gap-2', Astro.props.class]}
       transition:name={`post-tags-${Astro.props.postId}`}
     >
-      {tags.map((tag) => (
+      {Array.from(tagsMap).map(([slug, tag]) => (
         <a
-          href={`/tags/${tag}/`}
+          href={`/tags/${slug}/`}
           class="parallelogram bg-primary text-white px-6 py-0 rounded-sm hover:bg-primary-600 transition-colors hover:bg-secondary hover:text-primary-600 text-sm font-semibold"
         >
           <span>{tag}</span>
