--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -5,15 +5,16 @@ export async function getStaticPaths() {
   const tags = await getTags();
 
   const paths = [];
-  for (const tag of tags) {
+  for (const [slug] of tags) {
     paths.push({
-      params: { tag },
-      rewrite: `/tags/${tag}`,
+      params: { tag: slug },
+      rewrite: `/tags/${slug}`,
     });
   }
   return paths;
 }
 
 const { tag } = Astro.params;
+console.log('----', tag);
 return Astro.rewrite(`/tags/${tag}/1`);
 ---
