--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -27,10 +27,10 @@ const { class: className } = Astro.props;
     <div class="flex-1 flex flex-col justify-center z-10 relative grow min-w-70">
       <header>
         <h1 class="mb-2 font-impact font-bold text-2xl md:text-4xl">{SITE_AUTHOR}</h1>
-        <h2 class="mb-1 text-xl font-normal">
+        <h2 class="mb-1 text-xl font-normal" transition:name="author-position">
           {SITE_AUTHOR_POSITION}
         </h2>
-        <h3 class="text-lg italic font-normal mb-6">
+        <h3 class="text-lg italic font-normal mb-6" transition:name="author-description">
           {SITE_AUTHOR_DESCRIPTION}
         </h3>
       </header>
@@ -44,7 +44,7 @@ const { class: className } = Astro.props;
       </aside>
 
       <div class="mt-4">
-        <SocialLinks size="xs" />
+        <SocialLinks size="xs" viewTransition />
       </div>
 
       <aside>
@@ -62,6 +62,7 @@ const { class: className } = Astro.props;
         alt={SITE_AUTHOR}
         src={SITE_AUTHOR_IMG_ALT}
         class="max-w-full grayscale mix-blend-multiply -mb-6 -mr-4 sm:-mr-6 lg:-mr-8 block aspect-1 scale-x-[-1] rounded-br-lg"
+        transition:name="author-image"
       />
     </div>
   </div>
