--- a/src/pages/blog/by-year.astro
+++ b/src/pages/blog/by-year.astro
@@ -1,6 +1,7 @@
 ---
 import SectionHeader from '@/components/SectionHeader.astro';
 import BaseLayout from '@/layouts/BaseLayout.astro';
+import { enrichBlogPost } from '@/utils/enrichBlogPost';
 import { getSlug } from '@/utils/getSlug';
 import { getSortedCollection } from '@/utils/getSortedCollection';
 import type { CollectionEntry } from 'astro:content';
@@ -47,21 +48,31 @@ const postsByYearSorted = Array.from(postsByYear.entries()).sort(
           </h2>
           <ul class="mb-12 list-none">
             {/* Mapping through posts of the current year */}
-            {posts.map((post) => (
-              <li class="mb-2 flex gap-5">
-                <span class="md:w-40 text-primary md:text-right">
-                  {/* Displaying the publication date */}
-                  {post.data.pubDate.toLocaleDateString('en-us', {
-                    month: 'short',
-                    day: 'numeric',
-                  })}
-                </span>
-                <a class="flex-1 min-w-0 link font-semibold" href={getSlug(post)}>
-                  {/* Displaying the post title */}
-                  {post.data.title}
-                </a>
-              </li>
-            ))}
+            {posts.map((post) => {
+              const enrichedPost = enrichBlogPost(post);
+              return (
+                <li class="mb-2 flex gap-5">
+                  <span
+                    class="md:w-40 text-primary md:text-right"
+                    transition:name={`post-date-${enrichedPost.sanitizedId}`}
+                  >
+                    {/* Displaying the publication date */}
+                    {post.data.pubDate.toLocaleDateString('en-us', {
+                      month: 'short',
+                      day: 'numeric',
+                    })}
+                  </span>
+                  <a
+                    class="flex-1 min-w-0 link font-semibold"
+                    href={getSlug(post)}
+                    transition:name={`post-title-${enrichedPost.sanitizedId}`}
+                  >
+                    {/* Displaying the post title */}
+                    {post.data.title}
+                  </a>
+                </li>
+              );
+            })}
           </ul>
         </section>
       ))
